--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^3.4.19"
   },
   "devDependencies": {
+    "@types/node": "^20.11.21",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
