--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.5.6",
     "vue": "^3.4.19"
   },
   "devDependencies": {
@@ -22,6 +23,8 @@
     "stylelint": "^16.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.1.4",
     "vue-tsc": "^1.8.27"
   }
