--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "vue": "^3.4.19"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.21",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.17",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.35",
     "postcss-html": "^1.5.0",
     "prettier": "^3.1.1",
